--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x360-manager",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A modern game manager for Xbox 360 emulation with download and configuration features",
   "author": "X360 Team",
   "main": "electron.js",
@@ -101,7 +101,9 @@
         "requestedExecutionLevel": "asInvoker",
         "artifactName": "X360-Manager-Setup-${version}.${ext}",
         "sign": null,
-        "verifyUpdateCodeSignature": false
+        "verifyUpdateCodeSignature": false,
+        "signAndEditExecutable": false,
+        "signDlls": false
       },
     "mac": {
        "category": "public.app-category.games",
